# EverVance_CAN_to_USB

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMM_PROTOCOL_NOTES.md  Chat_Export_2026-03-08.md  Chat_Export_2026-03-10.md  Chat_Export_2026-03-12.md  Chat_Export_2026-03-14.md  Chat_Export_2026-03-22.md  Chat_Export_2026-03-22_注释补充记录.md  PROJECT_CONTEXT_AND_STRUCTURE.md  USB_DRIVER_STRATEGY_2026-03-11.md  device-config.json
Bootloader/: .cproject  .project  Bootloader_Debug.ld  CMakeLists.txt
Bootloader/source/: Bootloader.c
Bootloader/startup/: startup_mimxrt1062.c
Bootloader/xip/: evkbmimxrt1060_flexspi_nor_config.c
CAN_APP/: .cproject  .project  CAN_APP_Debug.ld  CMakeLists.txt
CAN_APP/board/: board.h
CAN_APP/source/: CAN_APP.c  FreeRTOSConfig.h  bsp_peripherals.c  bsp_peripherals.h  can_bridge.c  can_bridge.h  can_internal_onchip.c  can_internal_onchip.h  can_stack.c  can_stack.h  can_types.h  canfd1_ext_spi.c  canfd1_ext_spi.h  lpspi1_bus.c  lpspi1_bus.h  rtos_app.c  rtos_app.h  tja1042_drv.c  tja1042_drv.h  usb_can_bridge.c  usb_can_bridge.h  usb_device_config.h  usb_vendor_bulk.c  usb_vendor_bulk.h  usb_vendor_bulk_desc.c  usb_vendor_bulk_desc.h
CAN_APP/startup/: startup_mimxrt1062.c
CAN_APP/xip/: evkbmimxrt1060_flexspi_nor_config.c
EverVance_V1.0/: EverVance 启动.lnk  README.md  build.bat  run_evervance.bat
EverVance_V1.0/src/: MainForm.cs  Models.cs  Transport.cs
Hardware/: Netlist_Schematic1_2026-03-08.tel  Netlist_Schematic1_V0.1.tel
Host_PC/: README.md  evervance.evproj  evervance_vehicle_demo.dbc  run_evervance.bat  run_host.bat
Host_PC/EverVance/: README.md  build.bat
Host_PC/EverVance/src/: DbcParser.cs  MainForm.cs  Program.cs  Transport.cs
Host_PC/docs/: RTOS_Debug_Workbench.md
Host_PC/scripts/: host_main.ps1  protocol.ps1  stress_winusb_bridge.ps1  test_single_channel.ps1
Host_PC/scripts/transports/: mock_transport.ps1  serial_transport.ps1  winusb_transport.ps1
Host_PC/winusb/: RT1062_Bulk_CAN_WinUSB.inf
tools/linkserver/: VBA_CAN_RT1062_MX25L3233.json  VBA_CAN_RT1062_MX25L3233_customcfx.json  VBA_CAN_RT1062_MX25L3233_customcfx_safe.json  capture_postreset_state.scp  debug_boot_chain.scp  flash_bootloader_via_sdp.ps1  gdb_boot_app_check.gdb  gdb_boot_chain_abs.gdb  gdb_boot_chain_abs.out  gdb_regs_only.gdb  peek_boot_state.scp  peek_lpspi1_regs.scp  peek_ocotp_boot.scp  recover_rt1062_under_reset.scp  sample_boot_pc.scp
tools/linkserver/custom_driver/LPCXFlashDriverLib/: .cproject  .gitignore
tools/linkserver/custom_driver/LPCXFlashDriverLib/inc/: lpcx_flash_driver.h
tools/linkserver/custom_driver/LPCXFlashDriverLib/src/: ServiceMessages.c
tools/linkserver/custom_driver/iMXRT1050_QSPI/: .cproject
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/: iMXRT1050_QSPI.map  makefile  sources.mk
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/CMSIS/: subdir.mk  system_MIMXRT1052.d  system_MIMXRT1052.su
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/QSPIsource/: flexspi_QSPI_flash.d  flexspi_QSPI_flash.su  subdir.mk
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/board/: board.d  board.su  clock_config.d  clock_config.su  pin_mux.d  pin_mux.su  subdir.mk
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/drivers/: fsl_clock.d  fsl_clock.su  fsl_common.d  fsl_common.su  fsl_flexspi.d  fsl_flexspi.su  fsl_gpio.d  fsl_gpio.su  fsl_lpuart.d  fsl_lpuart.su  subdir.mk
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/source/: FlashDev.d  FlashPrg.d  FlashPrg.su  subdir.mk
tools/linkserver/custom_driver/iMXRT1050_QSPI/MIMXRT1050-EVK_IS25WP064A/utilities/: fsl_assert.d  fsl_debug_console.d  fsl_debug_console.su  fsl_io.d  fsl_io.su  fsl_log.d  fsl_log.su  fsl_str.d  fsl_str.su  subdir.mk
tools/linkserver/custom_driver/iMXRT1050_QSPI/QSPIsource/: flexspi_QSPI_flash.c  flexspi_QSPI_flash.h
tools/linkserver/custom_driver/iMXRT1050_QSPI/builds/: MIMXRT1050-EVK_IS25WP064A.cfx
tools/linkserver/custom_driver/iMXRT1050_QSPI/source/: FlashDev.c  FlashPrg.c
